lab-depoymentsv.1/11-ab-testing-deployment/istio/virtual-service.yaml
# 11-ab-testing-deployment/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp.example.com
  http:
  - match:
    - headers:
        x-user-group:
          exact: "beta-testers"
    route:
    - destination:
        host: myapp
        subset: v2
  - route:
    - destination:
        host: myapp
        subset: v1
